# Webrays

./: CMakeCache.txt  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Color.cpp  Color.hpp  Example.cpp  Example.hpp  Helper.hpp  Main.cpp  Main.html  Main.js  Main.wasm  Tuple.cpp  Tuple.hpp
test/: CMakeLists.txt  CanvasTests.cpp  ColorTests.cpp  ExampleTests.cpp  TupleTests.cpp
